feat(toon): added an in-depth decoder implementation
Refs: micronaut-projects/micronaut-serialization/issues/1254